--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,3 +140,14 @@ li {
 .references {
   margin-top: 0.3rem;
 }
+
+.footer {
+  padding: 1rem;
+  text-align: center;
+  border-top: 1px solid var(--foreground);
+  margin-top: 2rem;
+  max-width: 775px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
